--- a/78831182/package.json
+++ b/78831182/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "start": "node ./api/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "npm start" : "./js/main.js",
+    "lambda-serve": "netlify-lambda serve functions",
+    "lambda-build": "netlify-lambda build functions"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "netlify-lambda": "^2.0.16"
   }
 }
